Descripción de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AARDVARK COIN</title>
-    <link rel="icon" href="/media/0x09579452bc3872727a5d105f342645792bb8a82b.png" type="image/png">
+    <link rel="icon" href="/media/base.jpg" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="" crossorigin="anonymous">
@@ -54,7 +54,7 @@
         <h2 class="coin">WHAT THE FUCK IS AN AARDVARK?</h2>
     </section>
     <section class="flex-container">
-        <img src="/media/nft.jpg" alt="Imagem à esquerda" width="400" height="400">
+        <img src="/media/base.jpg" alt="Imagem à esquerda" width="400" height="400">
         <h3 class="side-text">AARDVARKS ARE SOUTH AFRICAN GROUND PIGS WHO WELL…<br> EAT A LOT OF ANTS; 50,000 A DAY TO
             BE EXACT.</h3>
     </section>
@@ -66,7 +66,7 @@
             US.
         </h3>
     </section>
-    <img src="/media/LALA.jpg" alt="Imagem à direita" width="400" height="400">
+    <img src="/media/diamond vark.png" alt="Imagem à direita" width="400" height="400">
     <div class="animation-container">
         <img src="/media/ant.png" alt="ant" class="image">
         <img src="/media/ant.png" alt="ant" class="image">
@@ -88,7 +88,7 @@
             Tax: <a href="#" onclick="showBurnedImage(); return false;">0/0</a><br>
         </h3>
     </section>
-    <img src="/media/among-us-6008615_1920.png" class="shake-image" id="burnedImage" alt="Copiado">
+    <img src="/media/amoungussss.png" class="shake-image" id="burnedImage" alt="Copiado">
     <div class="animation-container">
         <img src="/media/ant.png" alt="ant" class="image">
         <img src="/media/ant.png" alt="ant" class="image">
@@ -107,15 +107,14 @@
     <section class="slider-container">
 
         <div class="slider">
-
-            <img src="/media/ebfb6fa2-ed58-4320-a507-8cc642d5f80a.jpg" alt="Imagen 1">
-            <img src="/media/oneddd.jpg" alt="Imagen 2">
+            <img src="/media/99.jpg" alt="Imagen 1">
+            <img src="/media/65dd56ca-e131-45ed-9b7c-c7dc6b683045.jpg" alt="Imagen 2">
             <img src="/media/FERRARDI.jpg" alt="Imagen 3">
-            <img src="/media/cocaine.jpg" alt="Imagen 4">
-            <img src="/media/CUM.jpg" alt="Imagen 5">
-            <img src="/media/99.jpg" alt="Imagen 6">
-            <img src="/media/ardface.jpg" alt="Imagen 4">
-            <img src="/media/CUBAN.jpg" alt="Imagen 5">
+            <img src="/media/oneddd.jpg" alt="Imagen 4">
+            <img src="/media/amoungussss.png" alt="Imagen 5">
+            <img src="/media/cocaine.jpg" alt="Imagen 6">
+            <img src="/media/CARTISSSSS.png" alt="Imagen 4">
+            <img src="/media/cookingchef.jpg" alt="Imagen 5">
             <img src="/media/GETTF.jpg" alt="Imagen 6">
         </div>
     </section>
