Actualización de colores y nueva imagen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AARDVARK COIN</title>
-    <link rel="icon" href="/media/base.jpg" type="image/png">
+    <link rel="icon" href="/media/LOGO.png" type="image/png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Boogaloo&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="" crossorigin="anonymous">
@@ -54,7 +54,7 @@
         <h2 class="coin">WHAT THE FUCK IS AN AARDVARK?</h2>
     </section>
     <section class="flex-container">
-        <img src="/media/base.jpg" alt="Imagem à esquerda" width="400" height="400">
+        <img src="/media/LOGO.png" alt="Imagem à esquerda" width="400" height="400">
         <h3 class="side-text">AARDVARKS ARE SOUTH AFRICAN GROUND PIGS WHO WELL…<br> EAT A LOT OF ANTS; 50,000 A DAY TO
             BE EXACT.</h3>
     </section>
